# hyred

./: .env.example  .gitignore  CLEANUP_VERIFICATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MCP_INTERFACE.md  PRD.md  README.md  SECURITY.md  ats_scorer.py  cover_letter_config.py  export_utils.py  fix_hyred.py  index.dev.html  index.html  index.html.bak  jd_parser.py  job_queue.py  job_scraper.py  llm_agent.py  main_ui.py  notebooklm_cv_import.py  notebooklm_integration.py  package-lock.json  package.json  pyproject.toml  rag_engine.py  requirements.txt  script.js  start.sh  status.html  style.css  version_history.py  vite.config.ts
.github/: pull_request_template.md
assets/: custom_fonts.css
docs/: 01_ARCHITECTURE_OVERVIEW.md  02_LOGIC_LIFECYCLE.md  05_EXTENDED_ARCHITECTURE.md  06_SECURITY_POSTURE.md  07_SYSTEMS_THINKING.md  08_VISUAL_ASSETS.md  09_PIPELINE_METRICS.md  10_VISUAL_STRATEGY.md  11_RESEARCH_AND_LEARNING.md  12_FORENSICS_AND_THREADS.md  13_GENERATIVE_OUTPUTS.md  14_TECHNICAL_REPORTS.md  APP_WORKING_BROWSER.md  DEPLOYMENT_COMPLETE.md  DISTRIBUTION_CHART.md  DOCS_LIVE_UPDATE.md  DRAG_DROP_IMPORT_GUIDE.md  ENHANCEMENT_IDEAS.md  FONTS_AND_TOOLS_INTEGRATION.md  IMPORT_QUICK_GUIDE.md  NOTEBOOKLM_AUTO_IMPORT.md  SETUP_GUIDE.md  TOP5_DEPLOYED.md  c4_(context).md  class.md  flowchart.md  pie_chart.md  quadrant_chart.md  requirement.md  sequence.md  state.md  xy_chart.md
pages/: 01_Import_Documents.py  02_Resume_Tools.py  03_Auto_Generate.py  04_Application_Tracker.py  05_Interview_Prep.py  06_Skills_Gap.py  07_CV_Versioning.py  08_Job_Archive.py  (+2 more)
(+45 files in other folders)
