[project]
name = "hyred"
version = "1.0.0"
description = "CV & Cover Letter Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "markitdown>=0.0.1a3",
    "lancedb>=0.5.1",
    "pyarrow>=15.0.0",
    "sentence-transformers>=2.3.1",
    "torch>=2.2.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
resume-builder = "main_ui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main_ui", "job_scraper", "llm_agent", "rag_engine", "file_watcher", "notebooklm_integration", "notebooklm_cv_import"]
